--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,14 +11,6 @@
     padding: 0;
 }
 
-.header-language__items {
-    display: none;
-}
-
-.header-language__items.open {
-    display: block;
-}
-
 body {
     background-color: black;
     color: var(--text-color);
@@ -28,7 +20,7 @@ body {
     border-bottom: 1px solid var(--text-color);
     padding: 20px 0;
     .header-container {
-        max-width: 1600px;
+        max-width: 1500px;
         margin: 0 auto;
         display: flex;
         align-items: center;
@@ -64,6 +56,48 @@ body {
                     margin-top: 5px;
                 }
             }
+
+            .header-language {
+                cursor: pointer;
+                position: relative;
+                width: 49px;
+                text-align: center;
+                .header-language__items {
+                    display: none;
+                    position: absolute;
+                    top: 100%;
+                    left: 0;
+                    margin-top: 5px;
+                    background-color: black;
+                    border: 1px solid var(--text-color);
+                    border-radius: 4px;
+                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                    &.open {
+                        display: block;
+                        position: absolute;
+                    }
+
+                    .header-language__item {
+                        cursor: pointer;
+                        padding: 8px 14px;
+                        transition: background-color 0.3s ease;
+
+                        &:hover {
+                            background-color: #2e2929;
+                        }
+                    }
+                }
+
+                /* Стиль выбранного элемента */
+                .header-language__selected {
+                    cursor: pointer;
+                    padding: 8px 14px;
+                    background-color: black;
+                    border: 1px solid var(--text-color);
+                    border-radius: 4px;
+                    user-select: none;
+                }
+            }
         }
     }
 }
@@ -74,4 +108,73 @@ body {
     display: flex;
     justify-content: center;
     gap: 60px;
+
+    .navigation__item {
+        border-bottom: 1px solid transparent;
+        padding-bottom: 5px;
+        transition: border 0.5s ease;
+        &:hover {
+            border-bottom: 1px solid var(--text-color);
+        }
+    }
+}
+
+.slider {
+    overflow: hidden;
+    position: relative;
+
+    .hover-slider-nav {
+        z-index: 5;
+        position: absolute;
+        bottom: 4%;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 10px;
+
+        &__item {
+            width: 10px;
+            height: 10px;
+            background-color: #fff;
+            border-radius: 50%;
+            border: 2px solid var(--text-color);
+            cursor: pointer;
+            transition: 0.5s;
+
+            &--active,
+            &:hover {
+                background-color: var(--text-color);
+            }
+        }
+    }
+
+    .hover-slider {
+        position: relative;
+        width: 100vw;
+        height: 90vh;
+        overflow: hidden;
+        background-color: #000;
+
+        &__item {
+            position: absolute;
+            width: 104vw;
+            height: 94vh;
+            top: -2vh;
+            left: -2vw;
+            //opacity: 0;
+            transition: 2s;
+            transform: translate(-2vh);
+
+            &-img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            &--active {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    }
 }
