--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 :root {
-  --text-color: rgb(255, 184, 51);
+  --text-color: #e87d25;
 }
 
 * {
@@ -111,8 +111,83 @@ body {
 }
 
 .slider {
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
+}
+.slider .hover-slider {
+  width: 100vw;
+  height: 90vh;
+  overflow: hidden;
+}
+.slider .hover-slider__item {
+  position: absolute;
+  width: 106vw;
+  height: 96vh;
+  top: -4vh;
+  left: -4vw;
+  opacity: 0;
+  transition: 0.6s linear;
+  transform: translate(-4vh);
+  pointer-events: none;
+}
+.slider .hover-slider__item-information {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.slider .hover-slider__item-information-h1 {
+  font-size: 50px;
+  letter-spacing: 1px;
+}
+.slider .hover-slider__item-information-p {
+  font-size: 15px;
+}
+.slider .hover-slider__item-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.slider .hover-slider__item--active {
+  opacity: 1;
+  transform: translate(0);
+  pointer-events: auto;
+}
+.slider .hover-slider-buttons {
+  position: absolute;
+  left: 2%;
+  right: 2%;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 5;
+  display: flex;
+  justify-content: space-between;
+}
+.slider .hover-slider-buttons__item {
+  border: none;
+  background-color: var(--text-color);
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: ease-in-out 0.3s;
+  cursor: pointer;
+}
+.slider .hover-slider-buttons__item svg {
+  width: 14px;
+  transition: ease-in-out 0.3s;
+}
+.slider .hover-slider-buttons__item:hover {
+  background-color: #000;
+}
+.slider .hover-slider-buttons__item:hover svg {
+  fill: var(--text-color);
 }
 .slider .hover-slider-nav {
   z-index: 5;
@@ -134,29 +209,4 @@ body {
 }
 .slider .hover-slider-nav__item--active, .slider .hover-slider-nav__item:hover {
   background-color: var(--text-color);
-}
-.slider .hover-slider {
-  position: relative;
-  width: 100vw;
-  height: 90vh;
-  overflow: hidden;
-  background-color: #000;
-}
-.slider .hover-slider__item {
-  position: absolute;
-  width: 104vw;
-  height: 94vh;
-  top: -2vh;
-  left: -2vw;
-  transition: 2s;
-  transform: translate(-2vh);
-}
-.slider .hover-slider__item-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.slider .hover-slider__item--active {
-  opacity: 1;
-  transform: translateY(0);
 }
