--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 :root {
   --text-color: #e87d25;
 }
@@ -14,7 +13,7 @@
 body {
   background-color: black;
   color: var(--text-color);
-  font-family: "PT Sans", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .header {
@@ -96,7 +95,7 @@ body {
 
 .navigation {
   font-size: 20px;
-  margin-top: 20px;
+  margin: 21px 0 15px 0;
   display: flex;
   justify-content: center;
   gap: 60px;
@@ -132,11 +131,10 @@ body {
 }
 .slider .hover-slider__item-information {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  top: 30%;
   width: 100%;
   height: 100%;
 }
@@ -146,6 +144,10 @@ body {
 }
 .slider .hover-slider__item-information-p {
   font-size: 15px;
+}
+.slider .hover-slider__item-information-button {
+  color: var(--text-color);
+  padding: 20px 60px;
 }
 .slider .hover-slider__item-img {
   width: 100%;
@@ -157,17 +159,11 @@ body {
   transform: translate(0);
   pointer-events: auto;
 }
-.slider .hover-slider-buttons {
-  position: absolute;
-  left: 2%;
-  right: 2%;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 5;
-  display: flex;
-  justify-content: space-between;
-}
 .slider .hover-slider-buttons__item {
+  position: absolute;
+  top: 50%;
+  z-index: 5;
+  transform: translateY(-50%);
   border: none;
   background-color: var(--text-color);
   height: 35px;
@@ -188,6 +184,12 @@ body {
 }
 .slider .hover-slider-buttons__item:hover svg {
   fill: var(--text-color);
+}
+.slider .hover-slider-buttons__item-left {
+  left: 2%;
+}
+.slider .hover-slider-buttons__item-right {
+  right: 2%;
 }
 .slider .hover-slider-nav {
   z-index: 5;
