--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 :root {
     --text-color: #e87d25;
 }
@@ -14,7 +13,7 @@
 body {
     background-color: black;
     color: var(--text-color);
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 .header {
     border-bottom: 1px solid var(--text-color);
@@ -104,7 +103,7 @@ body {
 
 .navigation {
     font-size: 20px;
-    margin-top: 20px;
+    margin: 21px 0 15px 0;
     display: flex;
     justify-content: center;
     gap: 60px;
@@ -140,11 +139,11 @@ body {
 
             &-information {
                 position: absolute;
-                background-color: rgba(0, 0, 0, 0.6);
+
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: center;
+                top: 30%;
                 width: 100%;
                 height: 100%;
 
@@ -155,6 +154,11 @@ body {
 
                 &-p {
                     font-size: 15px;
+                }
+
+                &-button {
+                    color: var(--text-color);
+                    padding: 20px 60px;
                 }
             }
 
@@ -172,39 +176,40 @@ body {
         }
     }
 
-    .hover-slider-buttons {
+    .hover-slider-buttons__item {
         position: absolute;
-        left: 2%;
-        right: 2%;
         top: 50%;
-        transform: translateY(-50%);
         z-index: 5;
+        transform: translateY(-50%);
+        border: none;
+        background-color: var(--text-color);
+        height: 35px;
+        width: 35px;
+        border-radius: 50%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+        transition: ease-in-out 0.3s;
+        cursor: pointer;
 
-        &__item {
-            border: none;
-            background-color: var(--text-color);
-            height: 35px;
-            width: 35px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        svg {
+            width: 14px;
             transition: ease-in-out 0.3s;
-            cursor: pointer;
+        }
 
+        &:hover {
+            background-color: #000;
             svg {
-                width: 14px;
-                transition: ease-in-out 0.3s;
+                fill: var(--text-color);
             }
+        }
 
-            &:hover {
-                background-color: #000;
-                svg {
-                    fill: var(--text-color);
-                }
-            }
+        &-left {
+            left: 2%;
+        }
+
+        &-right {
+            right: 2%;
         }
     }
 
