--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 :root {
   --text-color: #e87d25;
@@ -14,6 +14,38 @@ body {
   background-color: black;
   color: var(--text-color);
   font-family: "Inter", sans-serif;
+}
+
+.get-vacancy-button {
+  position: relative;
+  font-size: 1em;
+  font-weight: 500;
+  background-color: #000;
+  color: var(--text-color);
+  padding: 1.25em 3.9em;
+  border: 0.1875em solid var(--text-color);
+  cursor: pointer;
+  z-index: 0;
+  overflow: hidden;
+  transition: 0.8s;
+}
+.get-vacancy-button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: var(--text-color);
+  transition: 0.8s;
+  bottom: 0;
+  z-index: -5;
+  border-radius: 50% 50% 0 0;
+}
+.get-vacancy-button:hover {
+  color: black;
+}
+.get-vacancy-button:hover::before {
+  height: 200%;
 }
 
 .header {
@@ -57,12 +89,14 @@ body {
 .header .header-container .header-block .header-language {
   cursor: pointer;
   position: relative;
-  width: 49px;
+  z-index: 20;
+  width: 50px;
   text-align: center;
   /* Стиль выбранного элемента */
 }
 .header .header-container .header-block .header-language .header-language__items {
   display: none;
+  width: 50px;
   position: absolute;
   top: 100%;
   left: 0;
@@ -131,6 +165,7 @@ body {
 }
 .slider .hover-slider__item-information {
   position: absolute;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -141,13 +176,11 @@ body {
 .slider .hover-slider__item-information-h1 {
   font-size: 50px;
   letter-spacing: 1px;
+  margin-bottom: 30px;
 }
 .slider .hover-slider__item-information-p {
   font-size: 15px;
-}
-.slider .hover-slider__item-information-button {
-  color: var(--text-color);
-  padding: 20px 60px;
+  margin-bottom: 50px;
 }
 .slider .hover-slider__item-img {
   width: 100%;
@@ -158,6 +191,16 @@ body {
   opacity: 1;
   transform: translate(0);
   pointer-events: auto;
+}
+.slider .hover-slider__item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 .slider .hover-slider-buttons__item {
   position: absolute;
