--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 :root {
@@ -15,6 +15,43 @@ body {
     color: var(--text-color);
     font-family: 'Inter', sans-serif;
 }
+
+.get-vacancy-button {
+    position: relative;
+    font-size: 1em;
+    font-weight: 500;
+    background-color: #000;
+    // border-radius: 1.875em;
+    color: var(--text-color);
+    padding: 1.25em 3.9em;
+    border: 0.1875em solid var(--text-color);
+    cursor: pointer;
+    z-index: 0;
+    overflow: hidden;
+    transition: 0.8s;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 0%;
+        background-color: var(--text-color);
+        transition: 0.8s;
+        bottom: 0;
+        z-index: -5;
+        border-radius: 50% 50% 0 0;
+    }
+
+    &:hover {
+        color: black;
+
+        &::before {
+            height: 200%;
+        }
+    }
+}
+
 .header {
     border-bottom: 1px solid var(--text-color);
     padding: 20px 0;
@@ -59,10 +96,12 @@ body {
             .header-language {
                 cursor: pointer;
                 position: relative;
-                width: 49px;
+                z-index: 20;
+                width: 50px;
                 text-align: center;
                 .header-language__items {
                     display: none;
+                    width: 50px;
                     position: absolute;
                     top: 100%;
                     left: 0;
@@ -139,7 +178,7 @@ body {
 
             &-information {
                 position: absolute;
-
+                z-index: 10;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -150,15 +189,12 @@ body {
                 &-h1 {
                     font-size: 50px;
                     letter-spacing: 1px;
+                    margin-bottom: 30px;
                 }
 
                 &-p {
                     font-size: 15px;
-                }
-
-                &-button {
-                    color: var(--text-color);
-                    padding: 20px 60px;
+                    margin-bottom: 50px;
                 }
             }
 
@@ -172,6 +208,17 @@ body {
                 opacity: 1;
                 transform: translate(0);
                 pointer-events: auto;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                z-index: 5;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                background-color: rgba(0, 0, 0, 0.4);
             }
         }
     }
