--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   background-color: black;
   color: var(--text-color);
   font-family: "Inter", sans-serif;
+  font-size: 16px;
 }
 
 .get-vacancy-button {
@@ -89,7 +90,7 @@ body {
 .header .header-container .header-block .header-language {
   cursor: pointer;
   position: relative;
-  z-index: 20;
+  z-index: 15;
   width: 50px;
   text-align: center;
   /* Стиль выбранного элемента */
@@ -128,7 +129,7 @@ body {
 }
 
 .navigation {
-  font-size: 20px;
+  font-size: 17px;
   margin: 21px 0 15px 0;
   display: flex;
   justify-content: center;
@@ -160,7 +161,6 @@ body {
   left: -4vw;
   opacity: 0;
   transition: 0.6s linear;
-  transform: translate(-4vh);
   pointer-events: none;
 }
 .slider .hover-slider__item-information {
@@ -179,33 +179,38 @@ body {
   margin-bottom: 30px;
 }
 .slider .hover-slider__item-information-p {
-  font-size: 15px;
+  font-size: 16px;
   margin-bottom: 50px;
+  max-width: 50%;
 }
 .slider .hover-slider__item-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transform: translate(-4vh);
+  transition: transform linear 0.6s;
 }
 .slider .hover-slider__item--active {
   opacity: 1;
-  transform: translate(0);
   pointer-events: auto;
+}
+.slider .hover-slider__item--active img {
+  transform: translate(0);
 }
 .slider .hover-slider__item::after {
   content: "";
   position: absolute;
   top: 0;
-  z-index: 5;
+  z-index: 4;
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .slider .hover-slider-buttons__item {
   position: absolute;
   top: 50%;
-  z-index: 5;
+  z-index: 15;
   transform: translateY(-50%);
   border: none;
   background-color: var(--text-color);
@@ -235,7 +240,7 @@ body {
   right: 2%;
 }
 .slider .hover-slider-nav {
-  z-index: 5;
+  z-index: 15;
   position: absolute;
   bottom: 4%;
   left: 50%;
