--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ body {
     background-color: black;
     color: var(--text-color);
     font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
 .get-vacancy-button {
@@ -96,7 +97,7 @@ body {
             .header-language {
                 cursor: pointer;
                 position: relative;
-                z-index: 20;
+                z-index: 15;
                 width: 50px;
                 text-align: center;
                 .header-language__items {
@@ -141,7 +142,7 @@ body {
 }
 
 .navigation {
-    font-size: 20px;
+    font-size: 17px;
     margin: 21px 0 15px 0;
     display: flex;
     justify-content: center;
@@ -173,7 +174,7 @@ body {
             left: -4vw;
             opacity: 0;
             transition: 0.6s linear;
-            transform: translate(-4vh);
+
             pointer-events: none;
 
             &-information {
@@ -193,8 +194,9 @@ body {
                 }
 
                 &-p {
-                    font-size: 15px;
+                    font-size: 16px;
                     margin-bottom: 50px;
+                    max-width: 50%;
                 }
             }
 
@@ -202,23 +204,28 @@ body {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transform: translate(-4vh);
+                transition: transform linear 0.6s;
             }
 
             &--active {
                 opacity: 1;
-                transform: translate(0);
                 pointer-events: auto;
+
+                & img {
+                    transform: translate(0);
+                }
             }
 
             &::after {
                 content: '';
                 position: absolute;
                 top: 0;
-                z-index: 5;
+                z-index: 4;
                 right: 0;
                 left: 0;
                 bottom: 0;
-                background-color: rgba(0, 0, 0, 0.4);
+                background-color: rgba(0, 0, 0, 0.5);
             }
         }
     }
@@ -226,7 +233,7 @@ body {
     .hover-slider-buttons__item {
         position: absolute;
         top: 50%;
-        z-index: 5;
+        z-index: 15;
         transform: translateY(-50%);
         border: none;
         background-color: var(--text-color);
@@ -261,7 +268,7 @@ body {
     }
 
     .hover-slider-nav {
-        z-index: 5;
+        z-index: 15;
         position: absolute;
         bottom: 4%;
         left: 50%;
