--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 :root {
   --text-color: #e87d25;
 }
@@ -15,6 +15,23 @@ body {
   color: var(--text-color);
   font-family: "Inter", sans-serif;
   font-size: 16px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 42px;
+}
+
+p {
+  font-size: 20px;
 }
 
 .get-vacancy-button {
@@ -174,12 +191,14 @@ body {
   height: 100%;
 }
 .slider .hover-slider__item-information-h1 {
-  font-size: 50px;
+  font-weight: 600;
   letter-spacing: 1px;
   margin-bottom: 30px;
 }
 .slider .hover-slider__item-information-p {
-  font-size: 16px;
+  text-align: center;
+  line-height: 2;
+  font-weight: 300;
   margin-bottom: 50px;
   max-width: 50%;
 }
@@ -205,7 +224,7 @@ body {
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 .slider .hover-slider-buttons__item {
   position: absolute;
@@ -259,4 +278,39 @@ body {
 }
 .slider .hover-slider-nav__item--active, .slider .hover-slider-nav__item:hover {
   background-color: var(--text-color);
+}
+
+.about-us {
+  padding: 60px 0;
+}
+.about-us .about-us-block {
+  display: flex;
+  justify-content: space-between;
+}
+.about-us .about-us-block__info {
+  flex-basis: 40%;
+  padding: 60px 80px 60px 60px;
+  background-color: var(--text-color);
+  color: black;
+}
+.about-us .about-us-block__info-h2 {
+  font-weight: 600;
+}
+.about-us .about-us-block__info-h2::after {
+  content: "";
+  background-color: black;
+  height: 3px;
+  margin: 18px 0 28px;
+  max-width: 50px;
+  display: block;
+}
+.about-us .about-us-block__info-p {
+  line-height: 1.55;
+  font-size: 20px;
+  font-weight: 300;
+}
+.about-us .about-us-block__img {
+  width: 100%;
+  height: 100%;
+  max-width: 500px;
 }
