--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 :root {
     --text-color: #e87d25;
 }
@@ -15,6 +15,23 @@ body {
     color: var(--text-color);
     font-family: 'Inter', sans-serif;
     font-size: 16px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 42px;
+}
+
+p {
+    font-size: 20px;
 }
 
 .get-vacancy-button {
@@ -161,6 +178,7 @@ body {
 .slider {
     position: relative;
     overflow: hidden;
+
     .hover-slider {
         width: 100vw;
         height: 90vh;
@@ -188,13 +206,15 @@ body {
                 height: 100%;
 
                 &-h1 {
-                    font-size: 50px;
+                    font-weight: 600;
                     letter-spacing: 1px;
                     margin-bottom: 30px;
                 }
 
                 &-p {
-                    font-size: 16px;
+                    text-align: center;
+                    line-height: 2;
+                    font-weight: 300;
                     margin-bottom: 50px;
                     max-width: 50%;
                 }
@@ -225,7 +245,7 @@ body {
                 right: 0;
                 left: 0;
                 bottom: 0;
-                background-color: rgba(0, 0, 0, 0.5);
+                background-color: rgba(0, 0, 0, 0.6);
             }
         }
     }
@@ -289,6 +309,46 @@ body {
             &:hover {
                 background-color: var(--text-color);
             }
+        }
+    }
+}
+
+.about-us {
+    padding: 60px 0;
+
+    .about-us-block {
+        display: flex;
+        justify-content: space-between;
+
+        &__info {
+            flex-basis: 40%;
+            padding: 60px 80px 60px 60px;
+            background-color: var(--text-color);
+            color: black;
+
+            &-h2 {
+                font-weight: 600;
+                &::after {
+                    content: '';
+                    background-color: black;
+                    height: 3px;
+                    margin: 18px 0 28px;
+                    max-width: 50px;
+                    display: block;
+                }
+            }
+
+            &-p {
+                line-height: 1.55;
+                font-size: 20px;
+                font-weight: 300;
+            }
+        }
+
+        &__img {
+            width: 100%;
+            height: 100%;
+            max-width: 500px;
         }
     }
 }
