--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,20 @@ body {
   margin: 0 auto;
 }
 
+.sections {
+  padding: 50px 0;
+}
+
 h1 {
   font-size: 48px;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 
 h2 {
   font-size: 42px;
+  font-weight: 600;
+  margin-bottom: 50px;
 }
 
 p {
@@ -191,8 +199,6 @@ p {
   height: 100%;
 }
 .slider .hover-slider__item-information-h1 {
-  font-weight: 600;
-  letter-spacing: 1px;
   margin-bottom: 30px;
 }
 .slider .hover-slider__item-information-p {
@@ -280,9 +286,6 @@ p {
   background-color: var(--text-color);
 }
 
-.about-us {
-  padding: 60px 0;
-}
 .about-us .about-us-block {
   display: flex;
   justify-content: space-between;
@@ -294,6 +297,7 @@ p {
   color: black;
 }
 .about-us .about-us-block__info-h2 {
+  font-size: 42px;
   font-weight: 600;
 }
 .about-us .about-us-block__info-h2::after {
@@ -313,4 +317,31 @@ p {
   width: 100%;
   height: 100%;
   max-width: 500px;
+}
+
+.achievments {
+  max-width: 800px;
+  margin: 0 auto;
+}
+.achievments__h2 {
+  text-align: center;
+}
+.achievments-list {
+  list-style-image: url(/images/check-solid.svg);
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.achievments-list__item {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.achievments-list__item svg {
+  flex-shrink: 0;
+  width: 50px;
+  fill: var(--text-color);
+}
+.achievments-list__item-text {
+  line-height: 2;
 }
