--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
 :root {
     --text-color: #e87d25;
 }
@@ -22,12 +22,20 @@ body {
     margin: 0 auto;
 }
 
+.sections {
+    padding: 50px 0;
+}
+
 h1 {
     font-size: 48px;
+    font-weight: 600;
+    letter-spacing: 1px;
 }
 
 h2 {
     font-size: 42px;
+    font-weight: 600;
+    margin-bottom: 50px;
 }
 
 p {
@@ -206,8 +214,6 @@ p {
                 height: 100%;
 
                 &-h1 {
-                    font-weight: 600;
-                    letter-spacing: 1px;
                     margin-bottom: 30px;
                 }
 
@@ -314,8 +320,6 @@ p {
 }
 
 .about-us {
-    padding: 60px 0;
-
     .about-us-block {
         display: flex;
         justify-content: space-between;
@@ -327,6 +331,7 @@ p {
             color: black;
 
             &-h2 {
+                font-size: 42px;
                 font-weight: 600;
                 &::after {
                     content: '';
@@ -349,6 +354,36 @@ p {
             width: 100%;
             height: 100%;
             max-width: 500px;
+        }
+    }
+}
+
+.achievments {
+    max-width: 800px;
+    margin: 0 auto;
+
+    &__h2 {
+        text-align: center;
+    }
+
+    &-list {
+        list-style-image: url(/images/check-solid.svg);
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+        &__item {
+            display: flex;
+            align-items: center;
+            gap: 40px;
+
+            svg {
+                flex-shrink: 0;
+                width: 50px;
+                fill: var(--text-color);
+            }
+            &-text {
+                line-height: 2;
+            }
         }
     }
 }
