--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,35 @@ p {
   font-size: 20px;
 }
 
+.modal {
+  content: "";
+  z-index: 100;
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.modal.active {
+  display: flex;
+}
+.modal__close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+  width: 25px;
+  transition: 0.3s;
+  fill: white;
+}
+.modal__close:hover {
+  fill: gray;
+}
+
 .get-vacancy-button {
   position: relative;
   font-size: 1em;
@@ -297,8 +326,7 @@ p {
   color: black;
 }
 .about-us .about-us-block__info-h2 {
-  font-size: 42px;
-  font-weight: 600;
+  margin-bottom: 0;
 }
 .about-us .about-us-block__info-h2::after {
   content: "";
@@ -344,4 +372,72 @@ p {
 }
 .achievments-list__item-text {
   line-height: 2;
+}
+
+.certificats .container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.certificats .container .certificats__img {
+  max-width: 580px;
+  cursor: pointer;
+}
+.certificats .certificats-modal__img {
+  width: 900px;
+}
+
+.our-services__h2 {
+  text-align: center;
+}
+.our-services .our-services-cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+.our-services .our-services-cards__item {
+  padding: 30px 30px 40px;
+  background-color: var(--text-color);
+  color: black;
+  border-radius: 8px;
+  flex-basis: 33%;
+  cursor: pointer;
+}
+.our-services .our-services-cards__item-h4 {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.our-services .our-services-cards__item-p {
+  font-weight: 300;
+  margin: 20px 0;
+  line-height: 1.55;
+}
+.our-services .our-services-cards__item-button {
+  font-weight: 800;
+  font-size: 19px;
+}
+.our-services .our-services-cards__item-button::after {
+  content: "⮕";
+  display: inline-block;
+  margin-left: 10px;
+  transition: transform 0.3s;
+}
+.our-services .our-services-cards__item:hover {
+  background-color: rgb(236, 141, 47);
+}
+.our-services .our-services-cards__item:hover ::after {
+  transform: translateX(5px);
+}
+
+.countries__h2 {
+  text-align: center;
+}
+.countries .countries-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.countries .countries-list img {
+  max-width: 140px;
 }
