--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,9 @@ p {
   transform: translateX(5px);
 }
 
+.countries {
+  padding-bottom: 100px;
+}
 .countries__h2 {
   text-align: center;
 }
@@ -440,4 +443,40 @@ p {
 }
 .countries .countries-list img {
   max-width: 140px;
+}
+
+.forma {
+  background-image: url(/images/forma.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 100px 0;
+  position: relative;
+}
+.forma-info {
+  position: relative;
+  z-index: 10;
+  text-align: center;
+}
+.forma-info__p {
+  margin: 40px 0 80px;
+}
+.forma-info__arrow {
+  position: absolute;
+  top: 60%;
+  left: 36%;
+  width: 55px;
+  fill: var(--text-color);
+}
+.forma__overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.footer__h4 {
+  font-size: 14px;
+  font-weight: 300;
 }
