--- a/scss/style.scss
+++ b/scss/style.scss
@@ -496,6 +496,7 @@ p {
 }
 
 .countries {
+    padding-bottom: 100px;
     &__h2 {
         text-align: center;
     }
@@ -507,5 +508,48 @@ p {
         img {
             max-width: 140px;
         }
+    }
+}
+
+.forma {
+    background-image: url(/images/forma.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 100px 0;
+    position: relative;
+    &-info {
+        position: relative;
+        z-index: 10;
+        text-align: center;
+        &__h1 {
+        }
+
+        &__p {
+            margin: 40px 0 80px;
+        }
+
+        &__arrow {
+            position: absolute;
+            top: 60%;
+            left: 36%;
+            width: 55px;
+            fill: var(--text-color);
+        }
+    }
+
+    &__overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+}
+
+.footer {
+    &__h4 {
+        font-size: 14px;
+        font-weight: 300;
     }
 }
