--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,6 @@ p {
 .header-language {
   cursor: pointer;
   position: relative;
-  z-index: 15;
   justify-self: end;
 }
 .header-language__main {
@@ -127,8 +126,8 @@ p {
   transition: 0.2s;
 }
 .header-language .header-language__items {
-  display: none;
   position: absolute;
+  display: none;
   margin-top: 5px;
   background-color: #000;
 }
@@ -251,6 +250,7 @@ p {
     background-color: var(--text-color);
     left: 0;
     top: 9px;
+    transition: all 0.3s ease;
   }
   .header .header-container .header__burger::after, .header .header-container .header__burger::before {
     content: "";
@@ -259,12 +259,24 @@ p {
     height: 2px;
     background-color: var(--text-color);
     left: 0;
+    transition: all 0.3s ease;
   }
   .header .header-container .header__burger::after {
     bottom: 0;
   }
   .header .header-container .header__burger::before {
     top: 0;
+  }
+  .header .header-container .header__burger.active::before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+  .header .header-container .header__burger.active::after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+  .header .header-container .header__burger.active span {
+    transform: scale(0);
   }
   .header .header-container .header-language {
     display: none;
@@ -289,12 +301,15 @@ p {
 .navigation .header-language {
   display: none;
 }
+.navigation .header-language__items {
+  height: 300px;
+}
 @media (max-width: 767px) {
   .navigation {
     position: fixed;
     top: -100%;
     left: 0;
-    padding-top: 50px;
+    padding-top: 30px;
     z-index: 100;
     height: 100%;
     width: 100%;
