--- a/scss/style.scss
+++ b/scss/style.scss
@@ -225,7 +225,7 @@ p {
 
         .header-contacts {
             display: flex;
-            gap: 40px;
+            column-gap: 40px;
             justify-self: end;
             &__item {
                 display: flex;
@@ -236,101 +236,6 @@ p {
                     width: 1em;
                     fill: var(--text-color);
                 }
-            }
-        }
-
-        @media (max-width: 1034px) and (min-width: 768px) {
-            grid-template-columns: 50% 50%;
-
-            .header-language {
-                grid-column-start: 2;
-                grid-column-end: 3;
-                grid-row-start: 1;
-                grid-row-end: 2;
-            }
-
-            .header-contacts {
-                justify-self: center;
-                margin-top: 20px;
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 2;
-                grid-row-end: 3;
-            }
-        }
-
-        @media (max-width: 767px) {
-            grid-template-columns: 80% 20%;
-            grid-row-gap: 20px;
-
-            .header-logo {
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 1;
-                grid-row-end: 2;
-                justify-self: center;
-            }
-
-            .header-contacts {
-                grid-column-start: 1;
-                grid-column-end: 2;
-                justify-self: start;
-            }
-
-            .header__burger {
-                grid-column-start: 2;
-                grid-column-end: 3;
-                justify-self: end;
-                position: relative;
-                width: 30px;
-                height: 20px;
-
-                span {
-                    position: absolute;
-                    width: 100%;
-                    height: 2px;
-                    background-color: var(--text-color);
-                    left: 0;
-                    top: 9px;
-                    transition: all 0.3s ease;
-                }
-
-                &::after,
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 100%;
-                    height: 2px;
-                    background-color: var(--text-color);
-                    left: 0;
-                    transition: all 0.3s ease;
-                }
-
-                &::after {
-                    bottom: 0;
-                }
-
-                &::before {
-                    top: 0;
-                }
-
-                &.active {
-                    &::before {
-                        transform: rotate(45deg);
-                        top: 9px;
-                    }
-                    &::after {
-                        transform: rotate(-45deg);
-                        bottom: 9px;
-                    }
-
-                    span {
-                        transform: scale(0);
-                    }
-                }
-            }
-            .header-language {
-                display: none;
             }
         }
     }
@@ -357,30 +262,6 @@ p {
 
         &__items {
             height: 300px;
-        }
-    }
-
-    @media (max-width: 767px) {
-        position: fixed;
-        top: -100%;
-        left: 0;
-        padding-top: 30px;
-        z-index: 100;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.9);
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 25px;
-        overflow: auto;
-        transition: all 0.3s ease;
-        row-gap: 20px;
-        &.active {
-            top: 0;
-        }
-        .header-language {
-            display: block;
         }
     }
 }
