--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body.lock {
 }
 
 .sections {
-  padding: 50px 0;
+  padding: 50px 30px;
 }
 
 h1 {
@@ -40,13 +40,21 @@ h1 {
 }
 
 h2 {
-  font-size: 42px;
+  font-size: calc(
+            30px +
+                12 *
+                ((100vw - 320px) / 1360)
+        );
   font-weight: 600;
   margin-bottom: 50px;
 }
 
 p {
-  font-size: 20px;
+  font-size: calc(
+            16px +
+                4 *
+                ((100vw - 320px) / 1360)
+        );
 }
 
 .modal {
@@ -80,7 +88,11 @@ p {
 
 .get-vacancy-button {
   position: relative;
-  font-size: 1em;
+  font-size: calc(
+            16px +
+                4 *
+                ((100vw - 320px) / 1360)
+        );
   font-weight: 500;
   background-color: #000;
   color: var(--text-color);
@@ -230,15 +242,15 @@ p {
   width: 100vw;
   height: 90vh;
   overflow: hidden;
+  min-height: 550px;
 }
 .slider .hover-slider__item {
   position: absolute;
-  width: 106vw;
-  height: 96vh;
-  top: -4vh;
-  left: -4vw;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   transition: 0.6s linear;
+  min-height: 750px;
   pointer-events: none;
 }
 .slider .hover-slider__item-information {
@@ -249,9 +261,9 @@ p {
   align-items: center;
   top: 30%;
   width: 100%;
-  height: 100%;
 }
 .slider .hover-slider__item-information-h1 {
+  text-align: center;
   margin-bottom: 30px;
 }
 .slider .hover-slider__item-information-p {
@@ -345,7 +357,26 @@ p {
 }
 .about-us .about-us-block__info {
   flex-basis: 40%;
-  padding: 60px 80px 60px 60px;
+  padding-top: calc(
+            30px +
+                30 *
+                ((100vw - 320px) / 1360)
+        );
+  padding-right: calc(
+            20px +
+                60 *
+                ((100vw - 320px) / 1360)
+        );
+  padding-bottom: calc(
+            30px +
+                30 *
+                ((100vw - 320px) / 1360)
+        );
+  padding-left: calc(
+            20px +
+                40 *
+                ((100vw - 320px) / 1360)
+        );
   background-color: var(--text-color);
   color: black;
 }
@@ -362,7 +393,6 @@ p {
 }
 .about-us .about-us-block__info-p {
   line-height: 1.55;
-  font-size: 20px;
   font-weight: 300;
 }
 .about-us .about-us-block__img {
