--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,7 @@ body {
 }
 
 .sections {
-    padding: 50px 0;
+    padding: 50px 30px;
 }
 
 h1 {
@@ -61,13 +61,13 @@ h1 {
 }
 
 h2 {
-    font-size: 42px;
+    @include adaptiv-value('font-size', 42, 30, 0);
     font-weight: 600;
     margin-bottom: 50px;
 }
 
 p {
-    font-size: 20px;
+    @include adaptiv-value('font-size', 20, 16, 0);
 }
 
 .modal {
@@ -103,7 +103,7 @@ p {
 
 .get-vacancy-button {
     position: relative;
-    font-size: 1em;
+    @include adaptiv-value('font-size', 20, 16, 0);
     font-weight: 500;
     background-color: #000;
     // border-radius: 1.875em;
@@ -140,7 +140,6 @@ p {
 .header-language {
     cursor: pointer;
     position: relative;
-
     justify-self: end;
 
     &__main {
@@ -227,6 +226,7 @@ p {
             display: flex;
             column-gap: 40px;
             justify-self: end;
+
             &__item {
                 display: flex;
                 align-items: center;
@@ -274,16 +274,15 @@ p {
         width: 100vw;
         height: 90vh;
         overflow: hidden;
+        min-height: 550px;
 
         &__item {
             position: absolute;
-            width: 106vw;
-            height: 96vh;
-            top: -4vh;
-            left: -4vw;
+            width: 100%;
+            height: 100%;
             opacity: 0;
             transition: 0.6s linear;
-
+            min-height: 750px;
             pointer-events: none;
 
             &-information {
@@ -294,9 +293,9 @@ p {
                 align-items: center;
                 top: 30%;
                 width: 100%;
-                height: 100%;
 
                 &-h1 {
+                    text-align: center;
                     margin-bottom: 30px;
                 }
 
@@ -409,7 +408,11 @@ p {
 
         &__info {
             flex-basis: 40%;
-            padding: 60px 80px 60px 60px;
+            @include adaptiv-value('padding-top', 60, 30, 0);
+            @include adaptiv-value('padding-right', 80, 20, 0);
+            @include adaptiv-value('padding-bottom', 60, 30, 0);
+            @include adaptiv-value('padding-left', 60, 20, 0);
+
             background-color: var(--text-color);
             color: black;
 
@@ -427,7 +430,6 @@ p {
 
             &-p {
                 line-height: 1.55;
-                font-size: 20px;
                 font-weight: 300;
             }
         }
