--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,7 +73,7 @@ p {
 
 .modal {
     content: '';
-    z-index: 100;
+    z-index: 200;
     position: fixed;
     display: none;
     justify-content: center;
@@ -96,6 +96,9 @@ p {
         width: 25px;
         transition: 0.3s;
         fill: white;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 50%;
+        padding: 5px;
         &:hover {
             fill: gray;
         }
@@ -455,6 +458,7 @@ p {
         display: flex;
         flex-direction: column;
         gap: 35px;
+
         &__item {
             display: flex;
             align-items: center;
@@ -475,17 +479,17 @@ p {
     .container {
         display: flex;
         justify-content: space-between;
-        gap: 20px;
-
+        gap: 10px;
         .certificats__img {
-            max-width: 580px;
+            max-width: 49%;
             cursor: pointer;
         }
     }
 
     .certificats-modal {
         &__img {
-            width: 900px;
+            max-width: 95%;
+            max-height: 95%;
         }
     }
 }
